2011-12-11  Roland Winkler  <winkler@gnu.org>
	* INSTALL, Makefile.in, aclocal.m4, configure.ac, install-sh:
	* lisp/Makefile.in, doc/Makefil.in, doc/bbdb.texi:
	* doc/doclicense.texi, doc/gpl.texi, tex/Makefile.in:
	* tex/bbdb-cols.tex, tex/bbdb-print-brief.tex, tex/bbdb-print.tex:
	New files.
	* lisp/makefile-temp: Renamed from lisp/Makefile.
	* README: Updated.

	* lisp/bbdb-ispell.el: Header updated.  Prefix bbdb-spell replaced
	by bbdb-ispell.
	(bbdb-ispell): New custom group.
	(bbdb-ispell-dictionary-list): Renamed from bbdb-spell-dictionary.
	(bbdb-ispell-field-list): Renamed from bbdb-spell-field.
	(bbdb-ispell-export): Merged with bbdb-spell-add-word.
	(bbdb-ispell-collect-words): Renamed from
	bbdb-spell-export-field. Merged with bbdb-spell-append-word.

2011-12-11  Ivan Kanis <ivan.kanis@googlemail.com>
	* lisp/bbdb-ispell.el: New file

2011-11-27  Roland Winkler  <winkler@gnu.org>
	* README: Updated.

	* lisp/bbdb.el: Revert change from 2011-10-11.  Loading
	bbdb-autoloads.el is sufficient.

	* lisp/Makefile: It no longer supports VM by default, but you need
	to enable it.

2011-11-27  Leo  <sdl.web@gmail.com>
	* lisp/bbdb.el (bbdb-image-suffixes): Fix typo.

2011-11-20  Roland Winkler  <winkler@gnu.org>
	* README: Updated.

	* lisp/bbdb.el (bbdb-message-try-all-headers)
	(bbdb-user-mail-address-re): Clarify doc string.
	(bbdb-defstruct): Do not update bbdb-mail-aliases-need-rebuilt.
	(bbdb-record-set-note): Update bbdb-mail-aliases-need-rebuilt.
	(bbdb-record-set-name): Update name in cache and hash.
	(bbdb-record-unset-name): Removed (obsolete).
	(bbdb-hash-update): New function.
	(bbdb-record-set-field): Use it.
	(bbdb-records): Initiate variable bbdb-records.
	(bbdb-parse-internal): Use bbdb-goto-first-record.
	(bbdb-goto-first-record): Move backward only if we found a first
	record.

	* lisp/bbdb-com.el (bbdb-insert-field)
	(bbdb-delete-field-or-record): Use bbdb-record-set-field.
	(bbdb-edit-field): New optional arg value.  Handle affix,