@@ -1,3 +1,9 @@
+2011-12-18  Roland Winkler  <winkler@gnu.org>
+	* lisp/bbdb-anniv.el (bbdb-anniv-alist): New format specification
+	`%t'.
+	(bbdb-anniv-diary-entries): Use it.  Handle diary's backup forms
+	in better a way.
+
 2011-12-11  Roland Winkler  <winkler@gnu.org>
 	* INSTALL, Makefile.in, aclocal.m4, configure.ac, install-sh:
 	* lisp/Makefile.in, doc/Makefil.in, doc/bbdb.texi:
